# realtime-optical-capture

./: .gitignore  AGENTS.md  CALIB.md  CLAUDE.md  CLI_COMPLETION.md  MOCAP.md  PREPARE.md  README.md  pyproject.toml
docs/: implementation_plan.md  original_prompts.md  track_plan.md  track_technical.md
models/: joint_mapper.pt  joint_mapper_xnorm.pkl  joint_mapper_ynorm.pkl
refs/smplx_from_freemocap_3d/: fit_freemocap_smplx.py
roc/: cli.py
roc/calib/: __init__.py  capture.py  solve.py  visualize.py
roc/config/: __init__.py  defaults.py  models.py  yaml_io.py
roc/io/: __init__.py  sessions.py  video.py
roc/mocap/: __init__.py  ablate_filters.py  analyze_jitter.py  benchmark_realtime.py  capture.py  common.py  hybrik_ik.py  hybrik_tracker.py  joint_mapper.py  logging_utils.py  offline.py  postprocess.py  realtime.py  render_2d_overlays.py  render_npz.py  render_reprojection_overlays.py  retarget.py  sync_capture.py  track.py  track_config.yaml  tune_postprocess.py
roc/mvs/: __init__.py  camera.py  offline.py  parallel.py  sdk_loader.py
roc/prepare/: __init__.py  app.py
roc/tracking/: __init__.py  mediapipe_tracker.py  model_paths.py
test/: bench_body_only_track.py  bench_e2e_strict.py  bench_e2e_track.py  bench_fk_track.py  bench_hybrik_full.py  bench_hybrik_warmstart.py  bench_pelvis_fix.py  bench_prepare_fps.py  bench_roc_equivalent.py  bench_track_priors.py  bench_track_retarget.py  check_quality.py  compare_track_fit.py  diagnose_gpu_nan.py  diagnose_gpu_nan2.py  diagnose_gpu_nan3.py  test_hybrik_ik.py  train_joint_mapper.py
(+3 files in other folders)
