[project]
name = "realtime-optical-capture"
version = "0.1.0"
description = "Fixed multi-view real-time optical pose estimation system"
requires-python = ">=3.10"
dependencies = [
  "aniposelib>=0.8",
  "argcomplete>=3.5",
  "matplotlib>=3.8",
  "mediapipe>=0.10",
  "numpy>=1.26",
  "opencv-python>=4.10",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
roc = "roc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["roc*"]
